404, Responsive lugares para visitar

--- a/index.html
+++ b/index.html
@@ -21,29 +21,29 @@
     <header>
         <nav class="navbar navbar-expand-lg navbar-dark bg-transparent">
             <div class="container justify-content-center">
-                <a class="navbar-brand" href="../index.html"><img src="../imagenes/canesyhumanos.jpg" alt="logo"></a>
+                <a class="navbar-brand" href="../index.html"><img src="imagenes/canesyhumanos.jpg" alt="logo"></a>
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="true" aria-label="Toggle navigation">
                     <span class="navbar-toggler-icon"></span>
                 </button>
                 <div class="navbar-collapse justify-content-center collapse" id="navbarNavAltMarkup">
                     <div class="navbar-nav nav-width justify-content-between text-center hola">
-                        <a class="limenu nav-link " href="/paginas/manos_a_la_obra.html">Manos a la Obra</a>
+                        <a class="limenu nav-link" href="/paginas/manos_a_la_obra.html">Manos a la Obra</a>
                         <a class="limenu nav-link" href="/paginas/conocenos.html">Conocenos</a>
                         <a class="limenu nav-link" href="/paginas/productos.html">Productos</a>
                         <a class="limenu nav-link" href="/paginas/agenda.html">Agenda</a>
                         <a class="limenu nav-link" href="/paginas/salud.html">Salud</a>
-                        <a class="limenu nav-link" href="/paginas/publicamosemprendi.html">Publicamos tu Emprendimiemto</a>
+                        <a class="limenu nav-link" href="/paginas/publicamosemprendi.html">Publicamos tu Emprendimiento</a>
                     </div>
                 </div>
             </div>
         </nav>
     </header>
     <main class="row">        
-        <h2 class="bienvenida"> Encontra todo sobre perros , sus humanos, actividades, salud</h2>
+        <h2 class="bienvenida"> Encontrá todo sobre perros, sus humanos, actividades, salud</h2>
         <div class="mainPrincipal mainprincipal-media">
             <article class="ultimapubli">
                 <img class="img1" src="./imagenes/publicacion.png" alt="rostro perrita">
-                <a class="linkcolor" href="paginas/ultimapubli.html"><h3 class="article">Ultima publicacion</h3>
+                <a class="linkcolor" href="paginas/ultimapubli.html"><h3 class="article">Ultima publicación</h3>
                 <p>Salud<br>CASA: Lugar seguro para tu cachorro/perro</p></a>
                 
             </article>
