--- a/paginas/agenda.html
+++ b/paginas/agenda.html
@@ -32,7 +32,7 @@
                         <a class="limenu nav-link" href="productos.html">Productos</a>
                         <a class="limenu nav-link" href="agenda.html">Agenda</a>
                         <a class="limenu nav-link" href="salud.html">Salud</a>
-                        <a class="limenu nav-link" href="publicamosemprendi.html">Publicamos tu Emprendimiemto</a>
+                        <a class="limenu nav-link" href="publicamosemprendi.html">Publicamos tu Emprendimiento</a>
                     </div>
                 </div>
             </div>
@@ -50,10 +50,10 @@
             <tr>  
                 <th>Especialidad</th>   
                 <th>Profesional</th>   
-                <th>Telefono</th> 
-                <th>Direccion</th>
+                <th>Teléfono</th> 
+                <th>Dirección</th>
                 <th>E-mail</th>
-                <th>Pais</th>    
+                <th>País</th>    
             </tr> 
             <tr>  
                 <td class="td1">Veterinario patológo</td>   
