--- a/paginas/conocenos.html
+++ b/paginas/conocenos.html
@@ -26,19 +26,19 @@
                     </button>
                     <div class="navbar-collapse justify-content-center collapse" id="navbarNavAltMarkup">
                         <div class="navbar-nav nav-width justify-content-between text-center hola">
-                            <a class="limenu nav-link " href="manos_a_la_obra.html">Manos a la Obra</a>
+                            <a class="limenu nav-link" href="manos_a_la_obra.html">Manos a la Obra</a>
                             <a class="limenu nav-link" href="conocenos.html">Conocenos</a>
                             <a class="limenu nav-link" href="productos.html">Productos</a>
                             <a class="limenu nav-link" href="agenda.html">Agenda</a>
                             <a class="limenu nav-link" href="salud.html">Salud</a>
-                            <a class="limenu nav-link" href="publicamosemprendi.html">Publicamos tu Emprendimiemto</a>
+                            <a class="limenu nav-link" href="publicamosemprendi.html">Publicamos tu Emprendimiento</a>
                         </div>
                     </div>
                 </div>
             </nav>
             <h1>Conocenos</h1>
-            <h2>Este es el Team detras de la pagina. Un grupo de Surtidos Bagley, Reciclados, Mil porciento guapos.</h2>
-            <p>(Tipo, Nombre, Edad, Descripcion, Superpoder, Muggle)</p>
+            <h2>Este es el Team detrás de la página. Un grupo de Surtidos Bagley, Reciclados, Mil porciento guapos.</h2>
+            <p>(Tipo, Nombre, Edad, Descripción, Superpoder, Muggle)</p>
         </header>
         <main>
             <div class="tablaconocenos tablaconocenos-media">  
@@ -47,7 +47,7 @@
                     <li>PABLO</li>   
                     <li>+30</li>  
                     <li>Padre, Tranquilo, Responsable, Inversor</li>   
-                    <li>Aficionado al cafe</li>   
+                    <li>Aficionado al café</li>   
                     <li>Mestizo</li>
                 </ul></div>
                 <div><ul class="hum2">  
@@ -70,7 +70,7 @@
                     <li id="subrayadocolor">CAN 2</li>   
                     <li>SAKURA</li>   
                     <li>4 años</li>  
-                    <li>Alegre, Inquieta, Jugetona</li>   
+                    <li>Alegre, Inquieta, Juguetona</li>   
                     <li>Acumuladora de juguetes</li>   
                     <li>Mestiza</li>
                 </ul></div>
