--- a/paginas/manos_a_la_obra.html
+++ b/paginas/manos_a_la_obra.html
@@ -26,12 +26,12 @@
                 </button>
                 <div class="navbar-collapse justify-content-center collapse" id="navbarNavAltMarkup">
                     <div class="navbar-nav nav-width justify-content-between text-center hola">
-                        <a class="limenu nav-link " href="manos_a_la_obra.html">Manos a la Obra</a>
+                        <a class="limenu nav-link" href="manos_a_la_obra.html">Manos a la Obra</a>
                         <a class="limenu nav-link" href="conocenos.html">Conocenos</a>
                         <a class="limenu nav-link" href="productos.html">Productos</a>
                         <a class="limenu nav-link" href="agenda.html">Agenda</a>
                         <a class="limenu nav-link" href="salud.html">Salud</a>
-                        <a class="limenu nav-link" href="publicamosemprendi.html">Publicamos tu Emprendimiemto</a>
+                        <a class="limenu nav-link" href="publicamosemprendi.html">Publicamos tu Emprendimiento</a>
                     </div>
                 </div>
             </div>
@@ -52,8 +52,8 @@
                     <div class="modal-body">
                     <h4> Este primer juguete que vamos a empezar a hacer es super practico</h4>
                     <h4>tanto como primer juguete de cachorro como para el juego habitual con perros adultos.</h4>
-                    <h4> El proceso es muy facil, es un trenzado sencillo de tres tiras en lo posible elastica. Hay trenzados mas complejos de 4 grupos de tiras que logran generar cuerdas mas gruesas, resistentes y flexibles.</h4>
-                    <h4> Siempre con la iniciativa de reciclar podes realizarlas con: tela de calza, remeras de modal o algodon, buzos. No es recomendable que uses tilas tejidas, como lanillas o de hilo. ya que es peligroso en caso de romperlo e ingerirlo. </h4>
+                    <h4> El proceso es muy fácil, es un trenzado sencillo de tres tiras en lo posible elástica. Hay trenzados más complejos de 4 grupos de tiras que logran generar cuerdas más gruesas, resistentes y flexibles.</h4>
+                    <h4> Siempre con la iniciativa de reciclar podés realizarlas con: tela de calza, remeras de modal o algodón, buzos. No es recomendable que uses telas tejidas, como lanillas o de hilo, ya que es peligroso en caso de romperlo e ingerirlo. </h4>
                     </div>
                 </div>
             </div>
@@ -63,7 +63,7 @@
             <div class="modal-dialog">
                 <div class="modal-content">
                     <div class="modal-header">
-                    <h5 class="modal-title" id="reciclarrollosLabel">Como reciclar rollos de cocina</h5>
+                    <h5 class="modal-title" id="reciclarrollosLabel">¿Cómo reciclar rollos de cocina?</h5>
                     <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
                     </div>
                     <div class="modal-body">
@@ -90,25 +90,25 @@
             <li class="tituloproducto">Juguetes</li>
                 <ul>
                     <li class="hacer btn btn-primary" data-bs-toggle="modal" data-bs-target="#cuerdadetela">Cuerdas de tela</li>
-                    <li class="hacer btn btn-primary" data-bs-toggle="modal" data-bs-target="#reciclarrollos">Como reciclar rollos de cocina</li>
+                    <li class="hacer btn btn-primary" data-bs-toggle="modal" data-bs-target="#reciclarrollos">¿Cómo reciclar rollos de cocina?</li>
                     <li class="hacer">Donitas tejidas</li>
                     <li class="hacer">Pelotas olfativas</li>
                 </ul>
             <li class="tituloproducto">Collares y Correas</li>
-                <h5> Decorar tu collar viejo es una gran oprotunidad para reciclar y ayudar al planeta</h5>
+                <h5> Decorar tu collar viejo es una gran oportunidad para reciclar y ayudar al planeta</h5>
                 <ul>
-                    <li class="hacer">Renova su collar gastado</li>
+                    <li class="hacer">Renová su collar gastado</li>
                     <li class="hacer">Correa nueva con 3 materiales</li>
                     <li class="hacer">¿Pluto tironea? Tu propio petral antitirones</li>
                 </ul>
             <li class="tituloproducto">Camitas</li>
                 <ul>
-                    <li  class="hacer">Renova tu camita</li>
+                    <li  class="hacer">Renová tu camita</li>
                     <li class="hacer">¿Palet? Seguimos reciclando</li>
                 </ul>
             <li class="tituloproducto">Abrigo</li>
                 <ul>
-                    <li class="hacer">Ponchito economico en pocos pasos</li>
+                    <li class="hacer">Ponchito económico en pocos pasos</li>
                 </ul>
             <li class="tituloproducto">Snack</li>
                 <ul>
