--- a/paginas/productos.html
+++ b/paginas/productos.html
@@ -26,12 +26,12 @@
                 </button>
                 <div class="navbar-collapse justify-content-center collapse" id="navbarNavAltMarkup">
                     <div class="navbar-nav nav-width justify-content-between text-center hola">
-                        <a class="limenu nav-link " href="manos_a_la_obra.html">Manos a la Obra</a>
+                        <a class="limenu nav-link" href="manos_a_la_obra.html">Manos a la Obra</a>
                         <a class="limenu nav-link" href="conocenos.html">Conocenos</a>
                         <a class="limenu nav-link" href="productos.html">Productos</a>
                         <a class="limenu nav-link" href="agenda.html">Agenda</a>
                         <a class="limenu nav-link" href="salud.html">Salud</a>
-                        <a class="limenu nav-link" href="publicamosemprendi.html">Publicamos tu Emprendimiemto</a>
+                        <a class="limenu nav-link" href="publicamosemprendi.html">Publicamos tu Emprendimiento</a>
                     </div>
                 </div>
             </div>
