--- a/paginas/publicamosemprendi.html
+++ b/paginas/publicamosemprendi.html
@@ -26,19 +26,19 @@
                 </button>
                 <div class="collapse navbar-collapse justify-content-center" id="navbarNavAltMarkup">
                     <div class="navbar-nav nav-width justify-content-between text-center hola">
-                        <a class="limenu nav-link " href="manos_a_la_obra.html">Manos a la Obra</a>
+                        <a class="limenu nav-link" href="manos_a_la_obra.html">Manos a la Obra</a>
                         <a class="limenu nav-link" href="conocenos.html">Conocenos</a>
                         <a class="limenu nav-link" href="productos.html">Productos</a>
                         <a class="limenu nav-link" href="agenda.html">Agenda</a>
                         <a class="limenu nav-link" href="salud.html">Salud</a>
-                        <a class="limenu nav-link" href="publicamosemprendi.html">Publicamos tu Emprendimiemto</a>
+                        <a class="limenu nav-link" href="publicamosemprendi.html">Publicamos tu Emprendimiento</a>
                     </div>
                 </div>
             </div>
         </nav>
     </header>
     <main>
-    <h2>¿Queres que difundamos tu emprendimiento? ¿Queres dejarnos tu comentario?</h2>
+    <h2>¿Querés que difundamos tu emprendimiento? ¿Querés dejarnos tu comentario?</h2>
     <div  class="text-center">
     <form class="col-auto text-center"><!--aplique bootstraps-->
         Tipo de mensaje
