--- a/paginas/salud.html
+++ b/paginas/salud.html
@@ -27,26 +27,26 @@
             </button>
             <div class="navbar-collapse justify-content-center collapse" id="navbarNavAltMarkup">
                 <div class="navbar-nav nav-width justify-content-between text-center hola">
-                    <a class="limenu nav-link " href="manos_a_la_obra.html">Manos a la Obra</a>
+                    <a class="limenu nav-link" href="manos_a_la_obra.html">Manos a la Obra</a>
                     <a class="limenu nav-link" href="conocenos.html">Conocenos</a>
                     <a class="limenu nav-link" href="productos.html">Productos</a>
                     <a class="limenu nav-link" href="agenda.html">Agenda</a>
                     <a class="limenu nav-link" href="salud.html">Salud</a>
-                    <a class="limenu nav-link" href="publicamosemprendi.html">Publicamos tu Emprendimiemto</a>
+                    <a class="limenu nav-link" href="publicamosemprendi.html">Publicamos tu Emprendimiento</a>
                 </div>
             </div>
         </div>
     </nav>
     <h1>Notas de salud</h1>
 </header>
-<main class="saludimg">
+<main>
 <!--notas sobre salud-->
 
 <div  class="notassalud">
     <div class="contenedor">
         <div class="card__header">
           <figure class="card__figure">
-            <img class="card__image" src="../imagenes/cachorronegro.jpg" alt="">
+            <img class="card__image" src="../imagenes/cachorronegro.jpg" alt="Cachorro negro sentado">
           </figure>
         </div>
         <div class="card__body">
@@ -66,12 +66,12 @@
     <div class="contenedor">
       <div class="card__header">
         <figure class="card__figure">
-          <img class="card__image" src="../imagenes/veterinaria.PNG" alt="">
+          <img class="card__image" src="../imagenes/veterinaria.PNG" alt="Carnet de vacunación">
         </figure>
       </div>
       <div class="card__body">
         <h2 class="card__titulo">La visita al veterinario</h2>
-        <h4 class="card__intro">Hacer que la visita  sea divertida y positiva. ¿Cómo se consigue que a tu perro le guste el veterinario?</h4>
+        <h4 class="card__intro">Hacer que la visita sea divertida y positiva. ¿Cómo se consigue que a tu perro le guste el veterinario?</h4>
       </div>
       <footer class="card__footer">
         <div>
@@ -84,7 +84,7 @@
     <div class="contenedor">
       <div class="card__header">
         <figure class="card__figure">
-          <img class="card__image" src="../imagenes/cachorro.jpg" alt="">
+          <img class="card__image" src="../imagenes/cachorro.jpg" alt="Perra adulta y perra cachorra sentadas">
         </figure>
       </div>
       <div class="card__body">
@@ -104,14 +104,14 @@
     <div class="contenedor">
       <div class="card__header">
         <figure class="card__figure">
-          <img class="card__image" src="../imagenes/cachorrocama.jpg" alt="">
+          <img class="card__image" src="../imagenes/cachorrocama.jpg" alt="Cachorra marrón acostada en la cama">
         </figure>
       </div>
       <div class="card__body">
         <h2 class="card__titulo">CASA: Lugar seguro para tu cachorro/perro</h2>
         <h4 class="card__intro">
-          Tu casa tiene que ser el lugar donde tu perro /cachorro se sienta más seguro del mundo mundial. Ese lugar donde pueda dormir a pierna suelta sin importarle nada .
-    Para conseguir eso debe ser real. Es decir, debe poder estar tranquilo en un lugar especial para él: su cuna, transportín … Debe entender todo lo que pasa a su alrededor.
+          Tu casa tiene que ser el lugar donde tu perro/cachorro se sienta super seguro. Ese lugar donde pueda dormir a pata suelta sin importarle nada.
+    Para conseguir eso debe poder estar tranquilo en un lugar especial para él: su cuna, transportín… Debe entender todo lo que pasa a su alrededor.
         </h4>
       </div>
       <footer class="card__footer">
