--- a/paginas/ultimapubli.html
+++ b/paginas/ultimapubli.html
@@ -8,7 +8,9 @@
     <meta name="description"content="Información sobre perros y humanos, actividades, manualidades, salud, agenda de profesionales.">
     <meta name="keywords"
     content="perro,perrito,dog,pet,mascota,juguete,toy,jugar,play,ponchito,abrigo,pasear,salud,casero,natural,primera,veterinario,comida,aprender,enseñar,castracion">
-    <link rel="stylesheet" href="css/style.css">   
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
+    <link rel="stylesheet" href="../css/style.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Benne&display=swap" rel="stylesheet">
@@ -23,17 +25,26 @@
                 </button>
                 <div class="navbar-collapse justify-content-center collapse" id="navbarNavAltMarkup">
                     <div class="navbar-nav nav-width justify-content-between text-center hola">
-                        <a class="limenu nav-link " href="manos_a_la_obra.html">Manos a la Obra</a>
+                        <a class="limenu nav-link" href="manos_a_la_obra.html">Manos a la Obra</a>
                         <a class="limenu nav-link" href="conocenos.html">Conocenos</a>
                         <a class="limenu nav-link" href="productos.html">Productos</a>
                         <a class="limenu nav-link" href="agenda.html">Agenda</a>
                         <a class="limenu nav-link" href="salud.html">Salud</a>
-                        <a class="limenu nav-link" href="publicamosemprendi.html">Publicamos tu Emprendimiemto</a>
+                        <a class="limenu nav-link" href="publicamosemprendi.html">Publicamos tu Emprendimiento</a>
                     </div>
                 </div>
             </div>
         </nav>
     </header>
+    <main>
+        <div class="row text-center">
+            <h1>"¡Ay!" ¡TENEMOS UN 404!</h1>
+            <div class="col-12">
+                <img class="flyer text-center" src="../imagenes/dog404.png">
+            </div>    
+            <h2>No te preocupes. Podes seguir navegando en el resto del sitio.</h2>
+        </div>
+    </main>
 <!-- cree el html para el enlace pero en realidad lo que
         voy a querer que muestre es la publicacion mas reciente de
         salud, o producto o manos a la obra-->
