Rutas imagenes aside

--- a/index.html
+++ b/index.html
@@ -55,9 +55,9 @@
             </article>
             <aside class="aside"><h3 class="article">Publicaciones likeadas de otra plataforma</h3>
                 <div>
-                <a class="linkcolor" href="https://www.instagram.com/dejandohuellitasfotografia/"><img class="asidelogo" src="imagenes/dejandohuellitas.PNG" alt="dejandohuellitas"></a>
-                <a class="linkcolor" href="https://beacons.page/dragoyarya"><img class="asidelogo" src="imagenes/dragoyarya.PNG" alt="dragoyarya"></a>
-                <a class="linkcolor" href="https://www.patitapatita.com/"><img class="asidelogo" src="imagenes/patitapatita.PNG" alt="patitapatita"></a>
+                <a class="linkcolor" href="https://www.instagram.com/dejandohuellitasfotografia/"><img class="asidelogo" src="../imagenes/dejandohuellitas.png" alt="dejandohuellitas"></a>
+                <a class="linkcolor" href="https://beacons.page/dragoyarya"><img class="asidelogo" src="../imagenes/dragoyarya.png" alt="dragoyarya"></a>
+                <a class="linkcolor" href="https://www.patitapatita.com/"><img class="asidelogo" src="imagenes/patitapatita.png" alt="patitapatita"></a>
                 </div>
             </aside>
         </div>
