--- a/index.html
+++ b/index.html
@@ -11,7 +11,6 @@
     content="perro,perrito,dog,pet,mascota,juguete,toy,jugar,play,ponchito,abrigo,pasear,salud,casero,natural,primera,veterinario,comida,aprender,enseñar,castracion">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
-
     <link rel="stylesheet" href="css/style.css">   
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -55,8 +54,8 @@
             </article>
             <aside class="aside"><h3 class="article">Publicaciones likeadas de otra plataforma</h3>
                 <div>
-                <a class="linkcolor" href="https://www.instagram.com/dejandohuellitasfotografia/"><img class="asidelogo" src="../imagenes/dejandohuellitas.png" alt="dejandohuellitas"></a>
-                <a class="linkcolor" href="https://beacons.page/dragoyarya"><img class="asidelogo" src="../imagenes/dragoyarya.png" alt="dragoyarya"></a>
+                <a class="linkcolor" href="https://www.instagram.com/dejandohuellitasfotografia/"><img class="asidelogo" src="imagenes/dejandohuellitas.png" alt="dejandohuellitas"></a>
+                <a class="linkcolor" href="https://beacons.page/dragoyarya"><img class="asidelogo" src="imagenes/dragoyarya.png" alt="dragoyarya"></a>
                 <a class="linkcolor" href="https://www.patitapatita.com/"><img class="asidelogo" src="imagenes/patitapatita.png" alt="patitapatita"></a>
                 </div>
             </aside>
@@ -70,7 +69,7 @@
                 <p>Comentarios de visitas:<br>TU COMENTARIO ES MUY IMPORTANTE PARA NOSOTROS<br>CANES Y HUMANOS</p>
             </div>
             <div class="col-md-4">
-                <a target="_blank" class="linkcolor"rel="noopener noreferrer" href="http://instagram.com/los.mestizos.salgueiro"><img src="imagenes/instagram_logo_icon_124339.png" alt="Seguinos en Instagram">Seguinos en Instagram</a>		    
+                <a target="_blank" class="linkcolor" rel="noopener noreferrer" href="http://instagram.com/los.mestizos.salgueiro"><img src="imagenes/instagram_logo_icon_124339.png" alt="Seguinos en Instagram">Seguinos en Instagram</a>		    
             </div>
         </div>
     </footer>
