subida de proyecto js linkeado en modal de salud

--- a/paginas/salud.html
+++ b/paginas/salud.html
@@ -122,6 +122,26 @@
           </div>
         </footer>
       </div>
+      <div class="contenedor">
+        <div class="card__header">
+          <figure class="card__figure">
+            <img class="card__image" src="../imagenes/platobalanceado.jpg" alt="Plato de balanceado">
+          </figure>
+        </div>
+        <div class="card__body">
+          <h2 class="card__titulo">¿Por qué dividimos los Alimentos Balanceados en Calidades?</h2>
+          <h4 class="card__intro">
+            Los Alimentos se dividen en 5 categorías según la calidad de sus materias primas, componentes y proceso de elaboración.
+          </h4>
+        </div>
+        <footer class="card__footer">
+          <div>
+            <a class="button" href="../js/proyectofinaljs.html">
+              Seguir leyendo...
+            </a>
+          </div>
+        </footer>
+    </div>
     </div>
   </main>
   <footer role="contentinfo">
