Edicion de card salud balanceado

--- a/paginas/salud.html
+++ b/paginas/salud.html
@@ -125,7 +125,7 @@
       <div class="contenedor">
         <div class="card__header">
           <figure class="card__figure">
-            <img class="card__image" src="../imagenes/platobalanceado.jpg" alt="Plato de balanceado">
+            <img class="card__image" src="../imagenes/platobalanceado.png" alt="Plato de balanceado">
           </figure>
         </div>
         <div class="card__body">
@@ -141,8 +141,9 @@
             </a>
           </div>
         </footer>
-    </div>
-    </div>
+      </div>
+    </div>   
+
   </main>
   <footer role="contentinfo">
     <div class="row">
